[gd_scene load_steps=4 format=3 uid="uid://c2sgi7pyvc50l"]

[ext_resource type="Script" uid="uid://dyhdpekbcmaut" path="res://addons/anim_delete_track/ui/main_panel.gd" id="1_stvdl"]
[ext_resource type="StyleBox" uid="uid://bhbqbh8iaph0s" path="res://addons/R2Ga_PVZ/ui/new_style_box_flat.tres" id="2_sh6u3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06l7b"]
bg_color = Color(0.145098, 0.145098, 0.145098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.101961, 0.101961, 0.101961, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_stvdl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PluginIntroductionPanel2" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(740, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/PluginIntroductionPanel2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer"]
custom_minimum_size = Vector2(725, 0)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_sh6u3")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "选择动画文件目录"

[node name="anim_path_box" type="HBoxContainer" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="anim_path_option" type="OptionButton" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer/anim_path_box"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
tooltip_text = "res://animation/"
clip_text = true

[node name="anim_select_button" type="Button" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer/anim_path_box"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "选择动画文件夹"

[node name="Label" type="Label" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "要删除的轨道属性:"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="cb_visible" type="CheckBox" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "visible"

[node name="cb_texture" type="CheckBox" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "texture"

[node name="cb_self_modulate" type="CheckBox" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "self_modulate"

[node name="run_button" type="Button" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer/VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "运行"

[node name="StatusLabel" type="Label" parent="HBoxContainer/PluginIntroductionPanel2/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PluginIntroductionPanel" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_06l7b")

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/PluginIntroductionPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PluginIntroductionPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="HBoxContainer/PluginIntroductionPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Anim_delete_track"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/PluginIntroductionPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "开发者：hsk-dream"
vertical_alignment = 1

[node name="Label5" type="Label" parent="HBoxContainer/PluginIntroductionPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "版本：v1.0.0"
vertical_alignment = 1

[node name="Label4" type="Label" parent="HBoxContainer/PluginIntroductionPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "插件简介：
1、对godot动画资源文件更新，对当前目录下的动画资源删除所有的选择轨道
2、实现了动画文件夹路径的选择和自动保存"
vertical_alignment = 1
autowrap_mode = 3
